# test_ngs_kifmm

./: CMakeLists.txt
src/: test_fmm3d.cpp  test_kifmm.cpp  testfmm.cpp
